fixed final spacing issues

--- a/resume/styles/styles.css
+++ b/resume/styles/styles.css
@@ -164,7 +164,7 @@ code {
     color: #E8E8E8;
     width: 170px;
     padding: 10px;
-    margin: 3px;
+    margin: 6px 3px;
     text-align: center;
     font-size: .9em;
     background-color: #455F5E;
